--- a/src/app/auth/auth.css
+++ b/src/app/auth/auth.css
@@ -1,6 +1,9 @@
 html, body { background-color: #01110b !important; color-scheme: dark; }
 
-
+*{
+  margin: 0;
+  padding: 0;
+}
 html {
   overflow-y: hidden;
   overscroll-behavior: none;
@@ -16,12 +19,13 @@ html {
 }
 
 .auth-card {
+  scale: 0.8;
   position: relative;
   background: rgba(5, 30, 20, 0.7);
   border: 1px solid rgba(0, 230, 118, 0.2);
   border-radius: 20px;
   padding: 3rem 2.5rem;
-  width: 100%;
+  width: 80%;
   max-width: 420px;
   text-align: center;
   box-shadow: 0 0 25px rgba(0, 230, 118, 0.15);
@@ -59,6 +63,11 @@ html {
   margin-bottom: 2rem;
   font-size: 0.95rem;
   opacity: 0.9;
+}
+.recaptcha{
+  display: flex;
+  white-space: none;
+  justify-content: space-around;
 }
 
 .form-group {
