--- a/src/app/auth/auth.css
+++ b/src/app/auth/auth.css
@@ -32,6 +32,14 @@ html {
   backdrop-filter: blur(10px);
   animation: fadeIn 0.7s ease;
 }
+.auth-error{
+  margin: 15px 0;
+  font-size: 1.2rem;
+  font-weight: 700;
+  background: linear-gradient(90deg, #e61300, #e9641d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 .back-btn {
   position: absolute;
