--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -23,15 +23,14 @@
         <input type="password" name="confirmPassword" ngModel required placeholder="••••••••" />
       </div>
 
-
-
       <div class="form-group recaptcha">
-        <ngx-recaptcha2 #captchaElem [siteKey]="siteKey" name="recaptcha" required theme="dark">
+        <ngx-recaptcha2 #captchaElem [siteKey]="siteKey" name="recaptcha" ngModel required theme="dark">
         </ngx-recaptcha2>
       </div>
       <button type="submit" class="btn primary" [disabled]="authForm.invalid">
         {{ isLogin ? 'Login' : 'Sign Up' }}
       </button>
+      <p  name="errorMessage" class="auth-error">{{errorMessage}}</p>
     </form>
 
     <div class="divider">
