--- a/src/app/layout/layout.css
+++ b/src/app/layout/layout.css
@@ -1,4 +1,4 @@
-/* layout.component.css */
+
 .layout {
   display: flex;
   height: 100vh;
@@ -27,19 +27,25 @@
   align-items: center;
   gap: 0.5rem;
   padding: 1.5rem 1rem;
+
+
 }
 
 .logo img {
   width: 40px;
+  cursor: pointer;
+  
 }
 
 .logo-text {
   font-size: 1.3rem;
   font-weight: 600;
   color: #00e676;
+  cursor: pointer;
+  
 }
 
-/* NAV LINKS */
+/* NAV lINKS */
 .nav-links {
   display: flex;
   flex-direction: column;
@@ -116,7 +122,7 @@
   color: #00e676;
 }
 
-/* MAIN CONTENT */
+/*  MAIN CONTENT */
 .main-content {
   flex: 1;
   display: flex;
@@ -233,5 +239,10 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media (max-width : 550px){
+  .sidebar{
+    display: none;
   }
 }
