Improved Auth Component

--- a/src/app/auth/auth.html
+++ b/src/app/auth/auth.html
@@ -10,17 +10,24 @@
     <form (ngSubmit)="onSubmit(authForm)" #authForm="ngForm" class="auth-form">
       <div class="form-group">
         <label>Email</label>
-        <input type="email" name="email" ngModel required placeholder="you@example.com" />
+        <input type="email" name="email" ngModel required placeholder="you@example.com" (change)="verifForm(authForm)"/>
       </div>
 
       <div class="form-group">
         <label>Password</label>
-        <input type="password" name="password" ngModel required placeholder="••••••••" />
+        <input [type]="passwordVisible ? 'text' : 'password'" name="password"  ngModel required placeholder="••••••••" (change)="verifForm(authForm)"/>
+        <svg id="eye-icon" class="eye-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round" (click)="togglePasswordVisibility()">
+          <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z" />
+          <circle cx="12" cy="12" r="3" />
+          <line [class.strikethrough-line]="!passwordVisible" x1="3" y1="3" x2="21" y2="21" />
+        </svg> 
       </div>
 
       <div *ngIf="!isLogin" class="form-group">
         <label>Confirm Password</label>
-        <input type="password" name="confirmPassword" ngModel required placeholder="••••••••" />
+        <input [type]="passwordVisible ? 'text' : 'password'" name="confirmPassword" ngModel required placeholder="••••••••" (change)="verifForm(authForm)"/>
+        
       </div>
 
       <div class="form-group recaptcha">
@@ -30,7 +37,7 @@
       <button type="submit" class="btn primary" [disabled]="authForm.invalid">
         {{ isLogin ? 'Login' : 'Sign Up' }}
       </button>
-      <p  name="errorMessage" class="auth-error">{{errorMessage}}</p>
+      <p name="errorMessage" class="auth-error">{{errorMessage}}</p>
     </form>
 
     <div class="divider">
@@ -46,7 +53,7 @@
 
     <p class="switch">
       {{ isLogin ? "Don't have an account?" : 'Already have an account?' }}
-      <a (click)="toggleAuthMode()">
+      <a (click)="toggleAuthMode();">
         {{ isLogin ? 'Sign up' : 'Login' }}
       </a>
     </p>
