--- a/src/app/auth/auth.css
+++ b/src/app/auth/auth.css
@@ -1,13 +1,19 @@
-html, body { background-color: #01110b !important; color-scheme: dark; }
+html,
+body {
+  background-color: #01110b !important;
+  color-scheme: dark;
+}
 
-*{
+* {
   margin: 0;
   padding: 0;
 }
+
 html {
   overflow-y: hidden;
   overscroll-behavior: none;
 }
+
 .auth-container {
   display: flex;
   justify-content: center;
@@ -16,6 +22,23 @@ html {
   background: radial-gradient(circle at top, #0a2a1f, #01110b 80%);
   font-family: 'Poppins', sans-serif;
   color: #e7fbee;
+}
+
+.eye-icon {
+  position: absolute;
+  right: 20px;
+  margin: -32px 0;
+}
+.eye-icon:hover{
+  cursor: pointer;
+}
+
+.strikethrough-line {
+  display: none;
+}
+
+.toggle-button.is-toggled .strikethrough-line {
+  display: block;
 }
 
 .auth-card {
@@ -32,7 +55,8 @@ html {
   backdrop-filter: blur(10px);
   animation: fadeIn 0.7s ease;
 }
-.auth-error{
+
+.auth-error {
   margin: 15px 0;
   font-size: 1.2rem;
   font-weight: 700;
@@ -72,7 +96,8 @@ html {
   font-size: 0.95rem;
   opacity: 0.9;
 }
-.recaptcha{
+
+.recaptcha {
   display: flex;
   white-space: none;
   justify-content: space-around;
@@ -192,6 +217,7 @@ html {
     opacity: 0;
     transform: translateY(15px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
