--- a/src/app/game-details/game-details.css
+++ b/src/app/game-details/game-details.css
@@ -34,7 +34,7 @@
 @media (min-width: 768px) {
   .header-hero {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
   }
 }
