--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -16,7 +16,7 @@
         <i class="fas fa-cog"></i>
         <span *ngIf="!isCollapsed">Dashboard</span>
       </a>
-      <a (click)="redirect('/profile')" routerLinkActive="active">
+      <a (click)="redirect('/profile/1')" routerLinkActive="active">
         <i class="fas fa-user"></i>
         <span *ngIf="!isCollapsed">Profile</span>
       </a>
@@ -42,7 +42,7 @@
     <p><strong>{{loggedUser}}</strong></p>
     <p class="email">{{loggedEmail}}</p>
     <hr />
-    <button (click)="redirect('/profile')">
+    <button (click)="redirect('/profile/1')">
       <i class="fas fa-user"></i> View Profile
     </button>
     <button (click)="logout()">
